# ffauto-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  PALETTES.md  README.md  build.rs
docs/: PALETTES_DYNAMIC.md  PALETTES_STATIC.md
ffauto/: Cargo.toml
ffauto/src/: cmd_auto.rs  cmd_barcode.rs  cmd_gif.rs  cmd_info.rs  cmd_palettes.rs  cmd_quant.rs  commands.rs  commands_traits.rs  common.rs  main.rs  palettes.rs  palettes_dynamic.rs  palettes_static.rs
ffauto/src/palettes/: uniform_ffmpeg.hex  uniform_perceptual.hex
ffauto/src/palettes/gradient-rs/: blues.json  bu-pu.json  cividis.json  cool.json  cubehelix.json  gn-bu.json  inferno.json  or-rd.json  oranges.json  pi-yg.json  pu-bu.json  pu-rd.json  rainbow.json  rd-bu.json  rd-gy.json  rd-yl-bu.json  turbo.json  viridis.json  warm.json  yl-gn.json  yl-or-rd.json
ffmpeg/: Cargo.toml
ffmpeg-macro/: Cargo.toml
ffmpeg-macro/src/: helpers.rs  lib.rs
ffmpeg/src/: ffarg.rs  lib.rs
ffmpeg/src/ffmpeg/: enums.rs  enums_impl.rs  ffmpeg.rs  ffmpeg_cropdetect.rs  ffprobe.rs  ffprobe_struct.rs  mod.rs  size.rs  timestamps.rs
ffmpeg/src/filters/: crop.rs  fade.rs  filterchain.rs  filterchain_list.rs  mod.rs  palettegen.rs  scale.rs  tonemap.rs
ffmpeg/src/filters/audio/: afade.rs  asplit.rs  loudnorm.rs  mod.rs  volume.rs
ffmpeg/src/filters/video/: blend.rs  color.rs  colorspace.rs  crop.rs  cropdetect.rs  eq.rs  fade.rs  format.rs  fps.rs  metadata.rs  mod.rs  normalize.rs  palettegen.rs  paletteuse.rs  scale.rs  select.rs  setparams.rs  setsar.rs  split.rs  subtitles.rs  tile.rs  tonemap.rs  unsharp.rs  xstack.rs  zscale.rs
ffmpeg/src/palettes/: mod.rs  pal_act.rs  pal_col.rs  pal_gpl.rs  pal_hex.rs  pal_json.rs  palette.rs
ffmpeg/tests/: crop_tests.rs  filter_tests.rs  palette_tests.rs  timestamp_tests.rs
ffmpeg/tests/palettes/: palette.act  palette.col  palette.hex  palette.json  palette_broken.col  palette_broken.gpl  palette_broken.hex  palette_broken.json
src/: args.rs  cmd.rs  cmd_auto.rs  cmd_barcode.rs  cmd_gif.rs  cmd_info.rs  cmd_quant.rs  commands.rs  commands_traits.rs  common.rs  ffmpeg.rs  main.rs  palettes.rs  vec_push_ext.rs
src/lib/: ffmpeg_enums.rs  ffmpeg_enums_impl.rs  ffprobe.rs  ffprobe_struct.rs  mod.rs  timestamps.rs
src/lib/ffmpeg/: enums.rs  enums_impl.rs  ffmpeg.rs  ffprobe.rs  ffprobe_struct.rs  mod.rs  size.rs  sizes.rs  timestamps.rs
src/lib/palettes/: mod.rs  pal_act.rs  pal_col.rs  pal_gpl.rs  pal_hex.rs  pal_json.rs  pal_pal.rs  palette.rs
src/palettes/: macintosh.hex  uniform_aseprite.hex  uniform_selective.hex  websafe.hex  windows.hex
src/palettes/dawnbringer-palettes/: db8.gpl
src/palettes/gradient-rs/: br-bg.json  bu-gn.json  greens.json  magma.json  plasma.json  pr-gn.json  pu-bu-gn.json  pu-or.json  purples.json  rd-pu.json  rd-yl-gn.json  reds.json  sinebow.json  spectral.json  yl-gn-bu.json  yl-or-br.json
tests/: crop_tests.rs  palette_tests.rs  timestamp_tests.rs
tests/palettes/: palette.gpl  palette.pal  palette_broken.act  palette_broken.pal
