[package]
name = "ffauto-rs"
version = "1.11.0"
repository = "https://github.com/SamusAranX/ffauto-rs"
edition = "2024"
rust-version = "1.93"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "ff"
path = "src/main.rs"

[profile.release]
debug = "line-tables-only"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
const_format = "0.2"
humansize = "2.1"
isolang = { git = "https://github.com/humenda/isolang-rs.git", rev = "2e184a9" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
