[package]
name = "ffauto-rs"
version = "1.11.0"
repository = "https://github.com/SamusAranX/ffauto-rs"
edition = "2024"
rust-version = "1.93"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "ff"
path = "src/main.rs"

[profile.release]
debug = "line-tables-only"
lto = "thin"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
enum_glob_use = "allow"
float_cmp = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
struct_excessive_bools = "allow" # lol
struct_field_names = "allow"
unreadable_literal = "allow"
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
const_format = "0.2"
humansize = "2.1"
isolang = { git = "https://github.com/humenda/isolang-rs.git", rev = "c0b2ba3" }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
