[workspace]
members = ["ffauto", "ffmpeg"]
default-members = ["ffauto"]
resolver = "3"

[workspace.package]
repository = "https://github.com/SamusAranX/ffauto-rs"
edition = "2024"
rust-version = "1.94"
publish = false

[profile.release]
debug = "line-tables-only"
lto = "thin"

[patch.crates-io.isolang]
git = "https://github.com/humenda/isolang-rs"
rev = "c0b2ba3"
