[package]
name = "ffauto"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "ff"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
float_cmp = "allow"
struct_excessive_bools = "allow" # lol
unreadable_literal = "allow"
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
const_format = "0.2"
ffmpeg = { path = "../ffmpeg" }
humansize = "2.1"
isolang = "2.4"
strum = { version = "0.28", features = ["derive"] }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
