[package]
name = "ffmpeg"
version = "1.11.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow" # lol
unreadable_literal = "allow"
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
humansize = "2.1"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.27"
